cleanup: remove unused search code
