# apps/api/openapi.json
@@ -340,125 +340,6 @@
         }
       }
     },
-    "/search": {
-      "post": {
-        "summary": "Search for a keyword in Google, returns top page results with markdown content for each page",
-        "operationId": "searchGoogle",
-        "tags": ["Search"],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "query": {
-                    "type": "string",
-                    "format": "uri",
-                    "description": "The query to search for"
-                  },
-                  "pageOptions": {
-                    "type": "object",
-                    "properties": {
-                      "fetchPageContent": {
-                        "type": "boolean",
-                        "description": "Fetch the content of each page. If false, defaults to a basic fast serp API.",
-                        "default": true
-                      },
-                      "includeHtml": {
-                        "type": "boolean",
-                        "description": "Include the HTML version of the content on page. Will output a html key in the response.",
-                        "default": false
-                      },
-                      "includeRawHtml": {
-                        "type": "boolean",
-                        "description": "Include the raw HTML content of the page. Will output a rawHtml key in the response.",
-                        "default": false
-                      }
-                    }
-                  },
-                  "searchOptions": {
-                    "type": "object",
-                    "properties": {
-                      "limit": {
-                        "type": "integer",
-                        "description": "Maximum number of results. Max is 20 during beta."
-                      }
-                    }
-                  }
-                },
-                "required": ["query"]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SearchResponse"
-                }
-              }
-            }
-          },
-          "402": {
-            "description": "Payment required",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "error": {
-                      "type": "string",
-                      "example": "Payment required to access this resource."
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "429": {
-            "description": "Too many requests",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "error": {
-                      "type": "string",
-                      "example": "Request rate limit exceeded. Please wait and try again later."
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "error": {
-                      "type": "string",
-                      "example": "An unexpected error occurred on the server."
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/crawl/status/{jobId}": {
       "get": {
         "tags": ["Crawl"],
